--- a/RealmModelGenerator/Base.lproj/Main.storyboard
+++ b/RealmModelGenerator/Base.lproj/Main.storyboard
@@ -720,7 +720,7 @@
                             <containerView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="420-fr-qut">
                                 <rect key="frame" x="200" y="20" width="400" height="520"/>
                                 <connections>
-                                    <segue destination="oMK-Do-o62" kind="embed" identifier="AttributesRelationshipsSegue" id="7MV-zg-pvn"/>
+                                    <segue destination="oMK-Do-o62" kind="embed" identifier="AttributesRelationshipsViewControllerSegue" id="7MV-zg-pvn"/>
                                 </connections>
                             </containerView>
                             <containerView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e17-Cb-9EH">
@@ -813,25 +813,65 @@
             </objects>
             <point key="canvasLocation" x="-145" y="1535"/>
         </scene>
-        <!--View Controller-->
+        <!--Attributes Relationships View Controller-->
         <scene sceneID="hne-yM-8PP">
             <objects>
-                <viewController id="oMK-Do-o62" sceneMemberID="viewController">
+                <viewController id="oMK-Do-o62" customClass="AttributesRelationshipsViewController" customModule="RealmModelGenerator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="9E4-bE-Siw">
                         <rect key="frame" x="0.0" y="0.0" width="400" height="540"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ntG-wP-iiR">
-                                <rect key="frame" x="18" y="503" width="64" height="17"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Attributes" id="yhX-6E-hnq">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5KP-T6-wAv">
-                                <rect key="frame" x="18" y="330" width="85" height="17"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Relationships" id="poZ-8Y-Cv5">
+                            <containerView identifier="relationshipsContainerView" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KwY-ho-WGM">
+                                <rect key="frame" x="0.0" y="140" width="400" height="200"/>
+                                <connections>
+                                    <segue destination="gmJ-8X-IHf" kind="embed" identifier="RelationshipsViewControllerSegue" id="Dbc-Vf-g7d"/>
+                                </connections>
+                            </containerView>
+                            <containerView identifier="attributesContainerView" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="750-dQ-YzS">
+                                <rect key="frame" x="0.0" y="340" width="400" height="200"/>
+                                <connections>
+                                    <segue destination="b2i-0O-NCg" kind="embed" identifier="AttributesViewControllerSegue" id="17z-N8-0a6"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                    </view>
+                </viewController>
+                <customObject id="sOh-XT-1QQ" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="155" y="1535"/>
+        </scene>
+        <!--Attributes View Controller-->
+        <scene sceneID="2Sz-5Y-htt">
+            <objects>
+                <viewController storyboardIdentifier="AttributesViewController" id="b2i-0O-NCg" customClass="AttributesViewController" customModule="RealmModelGenerator" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="ocp-JW-XtL">
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="roQ-Fs-5cO" customClass="AttributesView" customModule="RealmModelGenerator" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
+                            </customView>
+                        </subviews>
+                    </view>
+                    <connections>
+                        <outlet property="attributesView" destination="roQ-Fs-5cO" id="N2O-g4-KOK"/>
+                    </connections>
+                </viewController>
+                <customObject id="Yeo-ps-aVW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-45" y="2087"/>
+        </scene>
+        <!--Relationships View Controller-->
+        <scene sceneID="Kv4-5y-3jq">
+            <objects>
+                <viewController id="gmJ-8X-IHf" customClass="RelationshipsViewController" customModule="RealmModelGenerator" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="Xf9-9V-Mux">
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VO8-K7-waA">
+                                <rect key="frame" x="18" y="163" width="85" height="17"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Relationships" id="y0e-lU-9GB">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -840,9 +880,9 @@
                         </subviews>
                     </view>
                 </viewController>
-                <customObject id="sOh-XT-1QQ" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="LuB-yT-5ZM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="155" y="1535"/>
+            <point key="canvasLocation" x="372" y="2087"/>
         </scene>
         <!--Entity-->
         <scene sceneID="hov-AP-CN9">
